--- a/package.json
+++ b/package.json
@@ -1,37 +1,15 @@
 {
-  "name": "@haskkor/react-native-recaptchav3",
-  "version": "1.2.1",
-  "description": "React native component to use the invisible recaptcha v3 from Google",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "scripts": {
-    "dev": "yarn build -watch",
-    "build": "tsc",
-    "compile": "npm run build",
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Haskkor/react-native-recaptchav3.git"
-  },
-  "author": "Jeremy Farnault <farnaultjeremy@gmail.com>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Haskkor/react-native-recaptchav3/issues"
-  },
-  "homepage": "https://github.com/Haskkor/react-native-recaptchav3#readme",
+  "name": "@airwaze-qlab/react-native-recaptchav3",
+  "version": "1.0.0",
+  "private": true,
   "devDependencies": {
-    "@types/react": "^16.7.3",
-    "@types/react-native": "^0.57.7",
-    "react": "^16.6.2",
-    "react-native": "^0.57.4",
-    "typescript": "^3.1.6"
-  },
-  "peerDependencies": {
-    "react": "*",
-    "react-native": "*"
+    "@types/react": "~18.0.27",
+    "@types/react-native": "~0.70.6",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
-    "react-native-webview": "^9.0.1"
+    "react": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-webview": "11.26.0"
   }
 }
