--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-      - run: npm config set registry http://registry.npmjs.org
+      - run: npm config set registry https://registry.npmjs.org
       - run: npm i
       - run: npm publish --access public
         env:
