--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@airwaze-qlab/react-native-recaptchav3",
+  "name": "react-native-recaptchav3",
   "private": false,
   "version": "1.0.0",
   "devDependencies": {
