--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-          registry-url: https://registry.npmjs.org/airwaze
+          registry-url: https://registry.npmjs.org
       - run: npm i
       - run: npm publish --access public
         env:
